# Distributed-CC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  easy_build_and_compile.sh  setup.sh
includes/: constants.hpp  load_balancer.hpp  logger.hpp  utils.hpp  worker.hpp
src/: load_balancer.cpp  main.cpp  worker.cpp
tools/: cluster_to_binary.py  edgelist_to_binary.py
